// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can have additional class names 1`] = `
<button
  className="ui button test"
  onClick={undefined}
/>
`;

exports[`can hold content 1`] = `
<button
  className="ui button"
  onClick={undefined}
>
  Test
</button>
`;

exports[`does not render when isVisible is false 1`] = `null`;

exports[`does render when isVisible is true 1`] = `
<button
  className="ui button"
  onClick={undefined}
/>
`;

exports[`renders correctly 1`] = `
<button
  className="ui button"
  onClick={undefined}
/>
`;
